// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UI Layout Component Snapshot Tests > should_match_snapshot_for_disabled_button_state 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center rounded-xl font-bold transition-all duration-300 disabled:opacity-50 disabled:cursor-not-allowed active:scale-[0.98] tracking-tight focus:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary focus-visible:ring-offset-2 focus-visible:ring-offset-black bg-brand-primary text-white shadow-brand hover:brightness-105 border border-white/10 shadow-[0_4px_12px_rgba(249,115,22,0.25)] text-[13px] px-5 py-2.5"
    disabled=""
  >
    Unlocking...
  </button>
</DocumentFragment>
`;

exports[`UI Layout Component Snapshot Tests > should_match_snapshot_for_input_with_error_and_label 1`] = `
<DocumentFragment>
  <div
    class="w-full flex flex-col space-y-2"
  >
    <label
      class="text-[11px] font-bold uppercase tracking-[0.15em] text-muted/80 ml-1"
    >
      Email address
    </label>
    <input
      class="w-full bg-surface/50 border rounded-xl px-4 py-3 text-primary focus:ring-4 transition-all placeholder-muted/40 text-[14px] tracking-tight shadow-inner border-red-500/50 focus:border-red-500 focus:ring-red-500/10"
      placeholder="user@email.com"
    />
    <span
      class="text-xs text-danger"
    >
      Invalid format
    </span>
  </div>
</DocumentFragment>
`;

exports[`UI Layout Component Snapshot Tests > should_match_snapshot_for_primary_button_default_state 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center rounded-xl font-bold transition-all duration-300 disabled:opacity-50 disabled:cursor-not-allowed active:scale-[0.98] tracking-tight focus:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary focus-visible:ring-offset-2 focus-visible:ring-offset-black bg-brand-primary text-white shadow-brand hover:brightness-105 border border-white/10 shadow-[0_4px_12px_rgba(249,115,22,0.25)] text-[13px] px-5 py-2.5"
  >
    Unlock Vault
  </button>
</DocumentFragment>
`;

exports[`UI Layout Component Snapshot Tests > should_match_snapshot_for_waitlist_form_default_state 1`] = `
<DocumentFragment>
  <div
    class="w-full max-w-md mx-auto relative z-10"
    style="perspective: 1200px;"
  >
    <div
      class="w-full"
      style="transform-style: preserve-3d; transform: none;"
    >
      <form
        class="w-full bg-surface/80 backdrop-blur-xl border border-base rounded-3xl p-8 shadow-xl group relative overflow-hidden"
        style="transform: translateZ(30px);"
      >
        <div
          class="absolute inset-0 bg-gradient-to-tr from-brand-primary/10 to-transparent pointer-events-none transition-opacity duration-300"
        />
        <div
          class="flex flex-col gap-5 relative z-10"
        >
          <div
            class="relative"
          >
            <input
              class="w-full bg-page/50 border border-base focus:border-brand-primary rounded-xl px-5 py-4 text-primary placeholder-muted transition-all focus:shadow-[0_0_20px_rgba(249,115,22,0.15)] block"
              name="email"
              placeholder="Enter your email address"
              style="transform: translateZ(20px);"
              type="email"
            />
          </div>
          <button
            class="rounded-xl duration-300 disabled:opacity-50 disabled:cursor-not-allowed active:scale-[0.98] tracking-tight focus:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary focus-visible:ring-offset-2 focus-visible:ring-offset-black hover:brightness-105 border border-white/10 shadow-[0_4px_12px_rgba(249,115,22,0.25)] px-5 w-full py-4 text-lg font-bold bg-brand-primary hover:bg-brand-primary-hover text-white shadow-brand transition-all flex items-center justify-center gap-2"
            type="submit"
          >
            <span
              data-testid="lock-icon"
            />
            Claim Your Spot
          </button>
        </div>
        <div
          class="mt-6 flex flex-col items-center gap-3 relative z-10"
        >
          <div
            class="flex items-center gap-4 text-[11px] font-medium text-muted uppercase tracking-wider"
          >
            <div
              class="flex items-center gap-1.5 border border-base bg-surface/50 rounded-full px-2.5 py-1"
            >
              <span
                data-testid="shield-icon"
              />
              AES-256 Encrypted
            </div>
            <div
              class="flex items-center gap-1.5 border border-base bg-surface/50 rounded-full px-2.5 py-1"
            >
              <span
                data-testid="lock-icon"
              />
              Zero-Knowledge
            </div>
          </div>
          <p
            class="text-xs text-muted text-center"
          >
            Zero spam. Cancel anytime. Join 2,400+ protected families.
          </p>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;
